[2002-10-27]
- FIXED: SSlider constructor function in cpp had illegal default args. It compiled ok, but wel.. it was illegal :) THX Brian.
- ADDED: PPC port by Brian Francis.

[2002-10-26]
First release - v1.0