@@ -148,7 +148,7 @@ WMMApp::WMMApp( bool showSettingsPanel)
 
 	if( showSettingsPanel)
 	{
-		window = new BWindow( BRect( 200, 200, 200, 200), "What would You like?", B_TITLED_WINDOW_LOOK, B_NORMAL_WINDOW_FEEL, B_NOT_ZOOMABLE | B_NOT_RESIZABLE | B_NOT_MINIMIZABLE | B_WILL_ACCEPT_FIRST_CLICK | B_QUIT_ON_WINDOW_CLOSE, B_ALL_WORKSPACES);
+		window = new BWindow( BRect( 200, 200, 200, 200), "Where's my Mouse settings?", B_TITLED_WINDOW_LOOK, B_NORMAL_WINDOW_FEEL, B_NOT_ZOOMABLE | B_NOT_RESIZABLE | B_NOT_MINIMIZABLE | B_WILL_ACCEPT_FIRST_CLICK | B_QUIT_ON_WINDOW_CLOSE, B_ALL_WORKSPACES);
 		window->AddChild( new WMMSettingsView());
 	}
 	else
@@ -278,9 +278,9 @@ WMMSettingsView::WMMSettingsView()
 	rgb_color color = ui_color(B_MENU_SELECTION_BACKGROUND_COLOR);
 
 	//
-	slidRadius = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Circle radius at start", new BMessage( WMM_MSG_SET_RADIUS), 16, 64);
+	slidRadius = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Radius at start", new BMessage( WMM_MSG_SET_RADIUS), 16, 64);
 	slidRadius->SetHashMarks( B_HASH_MARKS_BOTTOM);
-	slidRadius->SetHashMarkCount( 48);
+	slidRadius->SetHashMarkCount( 16);
 	//slidRadius->SetLimitLabels("16", "64");
 	slidRadius->UseFillColor( true, &color);
 	slidRadius->SetValue( Settings.radius);
@@ -291,7 +291,7 @@ WMMSettingsView::WMMSettingsView()
 	if( rect.bottom > preferredHeight) preferredHeight = rect.bottom + 5;
 
 	//
-	slidCircles = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "How many circles?", new BMessage( WMM_MSG_SET_CIRCLES), 1, 15);
+	slidCircles = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Number of circles", new BMessage( WMM_MSG_SET_CIRCLES), 1, 15);
 	slidCircles->SetHashMarks( B_HASH_MARKS_BOTTOM);
 	slidCircles->SetHashMarkCount( 15);
 	slidCircles->UseFillColor( true, &color);
@@ -303,9 +303,9 @@ WMMSettingsView::WMMSettingsView()
 	if( rect.bottom > preferredHeight) preferredHeight = rect.bottom + 5;
 
 	//
-	slidLineWidth = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Circle's width", new BMessage( WMM_MSG_SET_LWIDTH), 1, 32);
+	slidLineWidth = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Circle width", new BMessage( WMM_MSG_SET_LWIDTH), 1, 32);
 	slidLineWidth->SetHashMarks( B_HASH_MARKS_BOTTOM);
-	slidLineWidth->SetHashMarkCount( 32);
+	slidLineWidth->SetHashMarkCount( 16);
 	slidLineWidth->UseFillColor( true, &color);
 	slidLineWidth->SetValue( Settings.lwidth);
 	slidLineWidth->ResizeToPreferred();
@@ -315,9 +315,9 @@ WMMSettingsView::WMMSettingsView()
 	if( rect.bottom > preferredHeight) preferredHeight = rect.bottom + 5;
 
 	//
-	slidLineSpace = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Space width between circles", new BMessage( WMM_MSG_SET_LSPACE), 1, 32);
+	slidLineSpace = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Space between circles", new BMessage( WMM_MSG_SET_LSPACE), 1, 32);
 	slidLineSpace->SetHashMarks( B_HASH_MARKS_BOTTOM);
-	slidLineSpace->SetHashMarkCount( 32);
+	slidLineSpace->SetHashMarkCount( 16);
 	slidLineSpace->UseFillColor( true, &color);
 	slidLineSpace->SetValue( Settings.lspace);
 	slidLineSpace->ResizeToPreferred();
@@ -325,7 +325,6 @@ WMMSettingsView::WMMSettingsView()
 	rect = slidLineSpace->Frame();
 	if( rect.right > preferredWidth) preferredWidth = rect.right;
 	if( rect.bottom > preferredHeight) preferredHeight = rect.bottom + 5;
-
 
 	//
 	slidPulseRate = new SSlider( BRect( left, preferredHeight, left+200, preferredHeight), "slidRadius", "Animation speed", new BMessage( WMM_MSG_SET_PULSE), 1, 5);
@@ -414,8 +413,8 @@ WMMSettingsView::Draw( BRect updateRect)
 	
 	InitDemo();
 
-	SetFontSize( 5);
-	DrawString( "by Shard", BPoint( demoRect.right - StringWidth("by Shard") + 2, demoRect.bottom + 5));
+	SetFontSize( 8);
+	DrawString( "by Shard", BPoint( demoRect.right - StringWidth("by Shard") + 2, demoRect.bottom + 8));
 }
 
 //---------------------------------------------------
